<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About</string>
    <string name="about_text">HomeViz is created by <a href="https://twitter.com/RobinDeCroon">Robin De Croon</a> with the main purpose of raising Energy Awareness for owners of a smart home. This application is developed with the aim of getting a master\'s degree in Engineering Computer Science at the <a href="http://www.kuleuven.be">University of Leuven</a>. Robin\'s supervisor is <a href="http://erikduval.wordpress.com/">Professor Dr. E. Duval</a> and his advisor is <a href="http://www.ariadne-eu.org/content/dr-joris-klerkx">Dr. J. Klerkx</a>. \n \nHomeViz currently only works with Loxone, the test hardware was provided by <a href="http://www.demec.be">Demec</a>. \n \nHomeViz automatically scans if a Loxone Miniserver is connected to the Home Network at the provided IP address. When HomeViz couldn\'t detect a Miniserver, you will see the demo mode. This mode can be used for testing or to get a general overview of HomeViz\' functions. \n \nFor more information or any other questions see my thesis\' blog:  <a href="http://robindecroon.wordpress.com/">http://robindecroon.wordpress.com/</a></string>
    <string name="action_settings">Settings</string>
    <string name="app_name">HomeViz</string>
    <string name="community">See what other users consumed</string>
    <string name="consumer_image">Consumer image</string>
    <string name="content_description_appliances_usage">Appliances Usage</string>
    <string name="content_description_heating_usage">Heating Usage</string>
    <string name="content_description_home_cinema_usage">Home Cinema Usage</string>
    <string name="content_description_light_usage">Light Usage</string>
    <string name="content_description_water_usage">Water Usage</string>
    <string name="demo_explanation">Random values will be used, they are not representative for your real usage!</string>
    <string name="demo_mode">Demo Mode</string>
    <string name="detail">Details</string>
    <string name="from">From</string>
    <string name="house">House</string>
    <string name="invalid_period">Please choose a valid date range!</string>
    <string name="kwh">kWh</string>
    <string name="liter">liter</string>
    <string name="loxone_demo_multiplier">Loxone demo multiplier</string>
    <string name="loxone_ip">192.168.1.200</string>
    <string name="loxone_password">admin</string>
    <string name="loxone_user">admin</string>
    <string name="menu_refresh">Resync statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="metaphor">Metaphor</string>
    <string name="metaphor_electricty_title">Carbon Footprint</string>
    <string name="metaphor_fuel_diesel"> l diesel</string>
    <string name="metaphor_fuel_gas"> l gas</string>
    <string name="metaphor_fuel_gasoline"> l gasoline</string>
    <string name="metaphor_fuel_oil"> l oil</string>
    <string name="metaphor_heating_title">Liters of Diesel</string>
    <string name="metaphor_image">Metaphor image</string>
    <string name="metaphor_water_text">Bottles of water (1,5l)</string>
    <string name="metaphor_water_title">Bottles of water (1,5l)</string>
    <string name="No">No</string>
    <string name="no_appliance_in_room">There are no appliances in this room!</string>
    <string name="no_heating_in_room">There are no heaters in this room!</string>
    <string name="no_home_cinema_in_room">There are no multimedia devices in this room!</string>
    <string name="no_lights">There are no lights in this room!</string>
    <string name="no_location">Unknown Location</string>
    <string name="no_network">You need to have a working internet connection to view this content.</string>
    <string name="no_water_in_room">There is no water usage in this room!</string>
    <string name="not_implemented_yet">This feature is not implemented yet! ;-)</string>
    <string name="period_custom">Custom Time Period</string>
    <string name="period_day">Today</string>
    <string name="period_last_month">Last Month</string>
    <string name="period_last_week">Last Week</string>
    <string name="period_last_year">Last Year</string>
    <string name="period_month">This Month</string>
    <string name="period_two_days_ago">2 days ago</string>
    <string name="period_week">This Week</string>
    <string name="period_year">This Year</string>
    <string name="period_yesterday">Yesterday</string>
    <string name="question_enable_location">Do you want to enable location services?</string>
    <string name="settings_allow_location_summary">When allowed HomeViz can calculate prices on local price exchange rates, when disabled Belgian prices will be used.</string>
    <string name="settings_allow_location_title">Allow HomeViz to use your location</string>
    <string name="settings_loxone_ip">Loxone IP Address</string>
    <string name="settings_loxone_password">Loxone password</string>
    <string name="settings_loxone_user">Loxone username</string>
    <string name="share">Share</string>
    <string name="share_text">Share your HomeViz graphics!</string>
    <string name="title_activity_main">HomeViz</string>
    <string name="toast_community">Sorry, this is not implemented yet! \nHere you will be able to see what other users have consumed.</string>
    <string name="toast_connection_error">No network connection could be established.</string>
    <string name="toast_data_loaded">Statistics were successfully synchronized!</string>
    <string name="toast_enable_location">Please enable location Services</string>
    <string name="toast_long_click_for_time">Use the arrows to select another period. Long click on this period to set a custom time!</string>
    <string name="toast_no_external_storage">In order to use this function you need to have external storage, sorry!</string>
    <string name="toast_no_file_manager">No File (Manager / Explorer)etc Found In Your Device</string>
    <string name="toast_no_larger_period">No larger period possible!</string>
    <string name="toast_no_location_resource">Please enable your WiFi or GPS for location tracking!</string>
    <string name="toast_no_more_detail">No more detail possible!</string>
    <string name="toast_no_share">Unfortunaltly HomeViz does not yet support sharing this graphics.</string>
    <string name="toast_no_share_providers">No Share Providers were found!</string>
    <string name="toast_no_smaller_period">No smaller period possible!</string>
    <string name="toast_swype_down_for_detail">Swype down for a more detailed view!</string>
    <string name="toast_too_fast">Not too fast please! :-)</string>
    <string name="toast_wrong_file">Please load the correct file!</string>
    <string name="total">Total</string>
    <string name="until">Until</string>
    <string name="usage">Usage</string>
    <string name="watt">Watt</string>
    <string name="Yes">Yes</string>
    <string name="yield">Yield</string>
    <string name="yield_current">Current production</string>
    <string name="yield_total">Total</string>
    <string name="you_text">Which room consumes the most?</string>

    <string-array name="usage_spinner_data">
        <item>Usage (icons)</item>
        <item>Usage (barchart)</item>
        <item>Usage (columnchart)</item>
    </string-array>
    <string-array name="you_spinner_data">
        <item>Treemap (lights)</item>
        <item>Treemap (appliances)</item>
        <item>Treemap (home cinemas)</item>
    </string-array>
    <string-array name="metaphor_spinner_data">
        <item>Metaphor (electricity)</item>
        <item>Metaphor (heating)</item>
        <item>Metaphor (water)</item>
    </string-array>
    <string-array name="yield_spinner_data">
        <item>Yield (Solar panels)</item>
        <item>Yield (Rain water)</item>
        <item>Yield (Ground water)</item>
    </string-array>

    <string name="title_activity_home_creator">Create your own home</string>
    <string name="menu_xmlcreator">Create your own home</string>
    <string name="home_creator_rooms_title">Your rooms:</string>
    <string name="home_creator_create_a_new_room">Create a new room</string>
    <string name="home_creator_room_name">Room name</string>
    <string name="home_creator_number_of_lights">Number of lights</string>
    <string name="home_creator_number_of_appliances">Number of appliances</string>
    <string name="home_creator_number_of_multimedia_devices">Number of multimedia devices</string>
    <string name="home_creator_number_of_water_consumers">Number of water consumers</string>
    <string name="home_creator_add_room">Add room</string>
    <string name="done">Done</string>
    <string name="enter_room_name">Please enter a room name!</string>
    <string name="clear">Clear all rooms!</string>
    <string name="clear_rooms_message">Are you sure you want to delete all rooms?</string>

</resources>