<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/share"/>
    <item
        android:id="@+id/menu_community"
        android:icon="@drawable/ic_menu_allfriends"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/community"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/about"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/menu_settings"/>

</menu>