<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:weightSum="4" >

    <libraries.stackoverflow.NoDefaultSpinner
        android:id="@+id/usage_spinner"
        android:layout_width="250dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:prompt="@string/usage"
        android:text="@string/app_name" />

    <libraries.stackoverflow.NoDefaultSpinner
        android:id="@+id/you_spinner"
        android:layout_width="250dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:prompt="@string/total"
        android:text="@string/app_name" />

    <libraries.stackoverflow.NoDefaultSpinner
        android:id="@+id/metaphor_spinner"
        android:layout_width="250dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:prompt="@string/metaphor"
        android:text="@string/app_name" />

    <libraries.stackoverflow.NoDefaultSpinner
        android:id="@+id/yield_spinner"
        android:layout_width="250dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:prompt="@string/yield"
        android:text="@string/app_name" />

</LinearLayout>